[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/AutoTranslatorMenu/AutoTranslatorMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/AutoTranslatorMenu/TranslatorsList.tscn" type="PackedScene" id=2]

[node name="AutoTranslatorMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 541.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 69.0
bbcode_enabled = true
bbcode_text = "Automatic text translator. Requires access to internet.

This is a very experimental feature, expect things not to work properly."
text = "Automatic text translator. Requires access to internet.

This is a very experimental feature, expect things not to work properly."
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 1280.0
margin_bottom = 77.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 1280.0
margin_bottom = 105.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 638.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Enable automatic text translation"

[node name="EnableTranslationBox" type="CheckBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 1280.0
margin_bottom = 409.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_top = 143.0
margin_right = 638.0
margin_bottom = 157.0
size_flags_horizontal = 3
text = "Language (The fonts don't support every language)"

[node name="LanguageList" type="ItemList" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 1280.0
margin_bottom = 437.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 638.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Manual \"Translate\" button"

[node name="EnableManualTranslateButton" type="CheckBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 441.0
margin_right = 1280.0
margin_bottom = 465.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 638.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Translate buttons and their descriptions"

[node name="TranslateButtonsButton" type="CheckBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 469.0
margin_right = 1280.0
margin_bottom = 541.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_top = 29.0
margin_right = 638.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Translator orders"

[node name="TranslatorsList" parent="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 72.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save and close"

[connection signal="toggled" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/EnableTranslationBox" to="." method="_on_EnableTranslationBox_toggled"]
[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/LanguageList" to="." method="_on_LanguageList_item_selected"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/EnableManualTranslateButton" to="." method="_on_EnableManualTranslateButton_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/TranslateButtonsButton" to="." method="_on_TranslateButtonsButton_toggled"]
[connection signal="onDownPressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/TranslatorsList" to="." method="_on_TranslatorsList_onDownPressed"]
[connection signal="onUpPressed" from="VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/TranslatorsList" to="." method="_on_TranslatorsList_onUpPressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
